fixed images display on smaller screens

--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -51,10 +51,11 @@
 
 			img {
 				width: 100%;
+				height: auto;
 			}
 			div.picture {
+				width: 100%;
 				max-width: 100%;
-				height: auto;
 			}
 		}
 
@@ -65,11 +66,12 @@
 
 			img {
 				width: 100%;
+				height: auto;
 				max-width: 100%;
 			}
 			div.picture {
+				width: 100%;
 				max-width: 100%;
-				height: auto;
 			}
 
 			@include breakpoint('<=small') {
